--- a/src/components/SearchForm/SearchForm.module.css
+++ b/src/components/SearchForm/SearchForm.module.css
@@ -4,6 +4,7 @@
 
 .container {
   padding-bottom: 15px;
+  margin-bottom: 29px;
   display: flex;
   justify-content: space-between;
   border-bottom: solid 1px var(--interface-stroke-2-color);
@@ -47,6 +48,41 @@
   opacity: 0.7;
 }
 
+.label {
+  position: relative;
+  display: flex;
+  gap: 12px;
+  justify-content: center;
+  align-items: center;
+}
+
+.checkbox {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  clip-path: inset(0 0 0 0);
+}
+
+.checkbox:checked + span {
+  background: url("../../images/tumb.svg");
+}
+
+.visibleCheckbox {
+  display: block;
+  width: 36px;
+  height: 20px;
+  background: url("../../images/tumboff.svg");
+  cursor: pointer;
+}
+
+.text {
+  color: var(--interface-font-main-color);
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 18px;
+}
+
 @media screen and (max-width: 1023.98px) {
   .SearchForm {
     padding-bottom: 62px;
@@ -65,5 +101,10 @@
   .input {
     text-align: left;
     font-size: 18px;
+  }
+
+  .text {
+    font-size: 11px;
+    line-height: 18px;
   }
 }
